Fix activity chart display
It did not fit into the element.

--- a/weblate_web/static/style-rtl.css
+++ b/weblate_web/static/style-rtl.css
@@ -550,6 +550,7 @@ section.messages div.wrap {
 	background-position: left center;
 	width: 100%;
 	float: right;
+    padding: 5px 0;
 }
 .trans-number {
 	color: #2A3744;
