--- a/weblate_web/static/style.css
+++ b/weblate_web/static/style.css
@@ -550,6 +550,7 @@ section.messages div.wrap {
 	background-position: right center;
 	width: 100%;
 	float: left;
+    padding: 5px 0;
 }
 .trans-number {
 	color: #2A3744;
